--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 BLOG_NAME=your_blog_name_here
 
 # Supabase Configuration
+SUPABASE_URL=your_supabase_url_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Discord Webhook URL
