Refactor to use only sensitive parts as environment variables

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 BLOG_NAME=your_blog_name_here
 
 # Supabase Configuration
-SUPABASE_URL=your_supabase_url_here
+SUPABASE_PROJECT_ID=your_supabase_project_id_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Discord Webhook URL
-DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
+# Discord Webhook Configuration
+DISCORD_WEBHOOK_ID=your_discord_webhook_id_here
+DISCORD_WEBHOOK_TOKEN=your_discord_webhook_token_here
